6) Small patch for more preempt and speedup.<br>
7) Fix subchannel and country code change.<br>
8) Fix wins webui.<br>
9) Prevent watchdog reset device at serial in/out (poll timer from serial driver).<br>
10) Prevent watchdog reset device at lan rx (poll timer from raeth driver).<br>
11) Update bropbear to 0.53.1 version.<br>
12) Fix restore MAC adresses after "hardware" reset.<br>
13) Fix align in raeth code.<br>
14) Drop code compat with 2.4.x kernel and cleanup.<br>
15) Prevent deadloop at WAN apply change if VPN started.<br>
17) Add tvport support.<br>
18) Route code speedup.<br>
19) Backport new jhash implementation.<br>
20) Some IE compat fixes.<br>
21) Rework and cleanup netfilter code.<br>
22) Fix update firmware on 8Mb FLASH devices.<br>
23) More correct error handling in the course of firmware update.<br>
24) Extended LED boot indication.<br>
25) bridge, route and others speedup.<br>
26) Workaround for no-cache in IE.<br>
27) Backport network fixes from upstream.<br>
28) Consolidate fastnat code.<br>
29) Fix for full disable fastnat mode if need.<br>
30) Fix Cone NAT implementation.<br>
31) Fix syslog in webui without CONFIG_LOGREAD in busybox.<br>
<br>
<b>1.5.x</b><br>
1) Move to 4.6.0 gcc.<br>
2) Fix EAP in bridge/mbssid mode.<br>
3) Enable double vlan tag support per default.<br>
4) Fix net/ip fib metrics.<br>
5) Zebra suspended (not build with gcc4.6.0).<br>
6) Try use new optimization in 4.6.0 gcc. Small code more speed.<br>
7) Try workaround speed regresion in mips32r2 at RT3050 rev P0.<br>
8) Remove some dead code.<br>
9) Fix some leaks.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>