@@ -178,6 +178,7 @@ session_timeout_interval=0
 quiet_interval=0
 AutoConnect=1
 FastConnect=1
+HiPower=0
 AutoRoaming=0
 TGnWifiTest=0
 RadioOn=1
