@@ -176,6 +176,7 @@ quiet_interval=0
 AutoConnect=1
 FastConnect=1
 AutoRoaming=0
+HiPower=0
 staPolicy=1
 WLAN_MAC_ADDR=00:0C:43:30:52:65
 WAN_MAC_ADDR=00:0C:43:30:52:66
