@@ -323,6 +323,7 @@
 7) Try workaround speed regresion in mips32r2 at RT3050 rev P0.<br>
 8) Remove some dead code.<br>
 9) Fix some leaks.<br>
+10) Add HiPower variable. Use for increase LNA gain. DANGEROUS. Reduces RF module life. (Need add in webui).<br>
 
 <br><br>
 <b>For support see:</b><br>
